--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.2.1",
+    "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.5.2",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.5",
@@ -40,7 +41,6 @@
     "gulp-inject": "^4.0.0",
     "gulp-jshint": "^1.9.4",
     "gulp-less": "^3.0.2",
-    "gulp-minify-css": "^1.0.0",
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^3.0.1",
